Add Google site verification to config

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: Qihang Li
 description: Mathematics Ph.D. Candidate, University of Maryland
 url: "https://Bionas-QL.github.io"
 theme: jekyll-theme-cayman
+google_site_verification: "fsiNt2lluPS0SATSZakBYrvUIZlbH7j_2VX_wezfWkY"
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
